--- a/Template.Web/wwwroot/css/History.css
+++ b/Template.Web/wwwroot/css/History.css
@@ -38,19 +38,51 @@ h1 {
 
 /* Profilo utente (cerchio con immagine) */
 .profile-img {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     background-color: #ddd;
     display: inline-block;
     margin-right: 20px;
 }
 
+.profile-img img{
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+#filter-box{
+    position: absolute;
+}
+
+.filter-panel {
+    right: 0;
+    margin-top: 10px;
+    position: absolute;
+    background-color: #4da3ff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 20px;
+    
+}
+
+.filter-panel-down {
+    left: -10px; /* Per spostarla leggermente sotto se vuoi che non tocchi l'icona */
+}
+
+.d-none{
+    display: none;
+}
+
+.btn-outline-primary {
+    position: relative; /* Necessario per il posizionamento relativo dell'icona */
+}
+
 /* Stile per la tabella */
 .table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
     /* Intestazioni della tabella */
