first attempt to view events on calendar

--- a/Template.Web/Features/Home/Home.cshtml
+++ b/Template.Web/Features/Home/Home.cshtml
@@ -77,7 +77,7 @@
                                 <div class="events mt-2">
                                     @foreach (var eventItem in day.Events)
                                     {
-                                        <div>@eventItem</div>
+                                        <img src="@eventItem" alt="Event Icon" class="event-icon" />
                                     }
                                 </div>
                                 <div class="event-menu" style="display: none;">
