--- a/Template.Web/Features/Home/Home.cshtml
+++ b/Template.Web/Features/Home/Home.cshtml
@@ -43,7 +43,7 @@
 
     <!-- Tab -->
     <div class="tabs">
-        <button class="btn btn-primary">Team</button>
+        <button class="btn btn-primary" onclick="location.href='@Url.Action("Team", "Team")'">Team</button>
         <button class="btn btn-primary" onclick="location.href='@Url.Action("Richiesta", "Richiesta")'">Richieste</button>
         <button class="btn btn-primary" onclick="location.href='@Url.Action("History", "History")'">Storico</button>
     </div>
