adjusted holidays (max one week per month)

--- a/Template.Web/Features/Home/Home.cshtml
+++ b/Template.Web/Features/Home/Home.cshtml
@@ -101,6 +101,7 @@
                                             <option value="smartworking">Smartworking</option>
                                             <option value="in presenza">Presenza</option>
                                             <option value="trasferta">Trasferta</option>
+                                            <option value="ferie">Ferie</option>
                                         </select>
                                         <button type="submit" class="btn btn-sm btn-primary mt-2">Aggiungi</button>
                                     </form>
