--- a/Template.Web/wwwroot/css/LoginStyle.css
+++ b/Template.Web/wwwroot/css/LoginStyle.css
@@ -1,6 +1,6 @@
 ﻿body {
     font-family: Arial, sans-serif;
-    background-image: url('/images/tuo-background.jpg'); /* Sostituisci con il nome effettivo del file immagine */
+    /*background-image: url('/images/tuo-background.jpg'); /* Sostituisci con il nome effettivo del file immagine */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
