css fixed for request page

--- a/Template.Web/Features/Richiesta/Richiesta.cshtml
+++ b/Template.Web/Features/Richiesta/Richiesta.cshtml
@@ -24,27 +24,7 @@
             <i class="bi bi-house-door"></i> Torna alla Home
         </a>
 
-
-        <div class="d-flex justify-content-end">
-            <button onclick="window.location.href='@Url.Action("Storico", "Richiesta")'" class="btn btn-primary btn-mg">Storico (solo per verifica)</button>
-        </div>
-
-        @if (User.IsInRole("Manager"))
-        {
-            <div class="d-glex justify-content-end">
-                <button>Gestisci Richieste Dipendenti</button>
-            </div>
-        }
-        else
-        {
-            <div>
-                <p>L'utente non ha ruolo manager</p>
-            </div>
-
-        }
-
-
-
+        
         <h1 class="text-center mb-4">Richiesta Permessi/Ferie</h1>
 
         @if (TempData["Message"] != null)
@@ -119,6 +99,16 @@
             <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary btn-lg">Invia</button>
             </div>
+
+
+            @if (User.IsInRole("Manager"))
+            {
+                <div class="container-fluid bg-light bottom-0 w-100 text-center p-3 mt-5">
+                    <p>Gestisci qui le richieste dei dipendenti del team:</p>
+                    <button onclick="window.location.href='@Url.Action("Storico","Richiesta")'" class="btn btn-primary btn-mg">Gestisci Richieste</button>
+                </div>
+            }
+
         </form>
     </div>
 
