fixed management of added travel permissions from calendar

--- a/Template.Web/Features/Home/Home.cshtml
+++ b/Template.Web/Features/Home/Home.cshtml
@@ -115,9 +115,9 @@
                                         <!-- Sezione per gli orari (Visibile solo per Trasferta e Permessi) -->
                                         <div id="timeFields-@day.Date.ToString("yyyy-MM-dd")" style="display: none;">
                                             <label for="orarioInizio-@day.Date.ToString("yyyy-MM-dd")">Orario Inizio:</label>
-                                            <input type="time" name="orarioInizio" id="orarioInizio-@day.Date.ToString("yyyy-MM-dd")" class="form-control">
+                                            <input type="time" name="startTime" id="orarioInizio-@day.Date.ToString("yyyy-MM-dd")" class="form-control">
                                             <label for="orarioFine-@day.Date.ToString("yyyy-MM-dd")">Orario Fine:</label>
-                                            <input type="time" name="orarioFine" id="orarioFine-@day.Date.ToString("yyyy-MM-dd")" class="form-control">
+                                            <input type="time" name="endTime" id="orarioFine-@day.Date.ToString("yyyy-MM-dd")" class="form-control">
                                         </div>
 
                                         <!-- Bottone per inviare il form -->
